Fixes image and corresponding content alignment issue

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,9 +1,4 @@
 // Home page New UI
-.row-homepage {
-  margin-bottom: 20px;
-  margin-top: 80px;
-}
-
 .btn-homepage {
   background-color: $green;
   border-radius: 36px;
@@ -98,7 +93,7 @@
   margin-bottom: 50px;
 }
 
-@media (max-width:765px) {
+@media (max-width: 765px) {
   .button-homepage {
     display: flex;
     justify-content: center;
@@ -110,7 +105,7 @@
   }
 }
 
-@media (max-width:1200px) and (min-width:765px){
+@media (max-width: 1200px) and (min-width: 765px) {
   .button-homepage {
     margin-top: 100px;
   }
